buttons and squares generated in js

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 </head>
 <body>
     <div id='squares'>
-        <div class='squares'></div>
-        <div class='squares'></div>
-        <div class='squares'></div>
+        
     </div>
     <div id='buttons'><button  id='showAll' class='buttons' style="display: none">SHOW ALL</button></div>
     <div id='buttons'><button  id='hideAll' class='buttons'>HIDE ALL</button></div>
-    <div id='buttons'><button  id='switchRed' class='buttons' switch='off'>HIDE RED</button></div>
-    <div id='buttons'><button  id='switchGreen' class='buttons' switch='off'>HIDE GREEN</button></div>
-    <div id='buttons'><button  id='switchBlue' class='buttons' switch='off'>HIDE BLUE</button></div>
+    <div id='colorButtons'></div>
     <script src="main.js"></script>
 </body>
 </html>
