fixed button layout

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-    <div id='squares'>
-        
-    </div>
+    <div id='squares'></div>
     <div id='buttons'><button  id='showAll' class='buttons' style="display: none">SHOW ALL</button></div>
     <div id='buttons'><button  id='hideAll' class='buttons'>HIDE ALL</button></div>
     <div id='colorButtons'></div>
