--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
     <div id='squares'></div>
-    <div id='buttons'><button  id='showAll' class='buttons' style="display: none">SHOW ALL</button></div>
-    <div id='buttons'><button  id='hideAll' class='buttons'>HIDE ALL</button></div>
+    <div id='buttons'></div>
     <div id='colorButtons'></div>
     <script src="main.js"></script>
 </body>
